* vm_trace.c (rb_threadptr_exec_event_hooks_orig): pop tag before   JUMP_TAG() if frame is `finish' frame.   Without this patch, there is an inconsistency between control   frame stack and tags stack.   [Bug #7668] * test/ruby/test_settracefunc.rb: add a test for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38721 b2dd03c8-39d4-4d8f-98ff-823fe69b080e